[package]
name    = "perfume-bundle"
version = "0.1.0"
edition = "2021"

[lib]
name      = "perfume_bundle"
crate-type = ["cdylib"]

[dependencies]
shopify_function = "0.2"
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"

[profile.release]
# Optimise for WASM binary size
opt-level = "z"
lto       = true
strip     = "symbols"
